--- a/list/martabak.html
+++ b/list/martabak.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <h1></h1>
-        <img src="/images/Martabak.jpg" alt="Martabak">
+        <h1>Martabak</h1>
+        <img src="../images/Martabak.jpg" alt="Martabak">
         <p>Source: <a href="http://nomadette.com/martabak-manis/">Nomadette</a></p>
         <h2>Ingredients</h2>
             <ul>
