--- a/list/rendang.html
+++ b/list/rendang.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Rendang</h1>
-        <img src="/images/Rendang.jpg" alt="Rendang">
+        <img src="../images/Rendang.jpg" alt="Rendang">
         <p>Source: <a href="https://rasamalaysia.com/beef-rendang-recipe-rendang-daging/">Rasa Malaysia</a></p>
         <h2>Ingredients</h2>
             <ul>
