--- a/list/satay.html
+++ b/list/satay.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Satay</h1>
-        <img src="/images/Satay.jpg" alt="Satay">
+        <img src="../images/Satay.jpg" alt="Satay">
         <p>Source: <a href="https://en.wikipedia.org/wiki/Satay">Wikipedia</a></p>
         <h2>Ingredients</h2>
             <ul>
