--- a/list/bakso.html
+++ b/list/bakso.html
@@ -7,8 +7,8 @@
 
     <body>
         <h1>Bakso</h1>
-        <img src="/images/Bakso.webp" alt="Bakso">
-        <p>Source: <a href="https://www.thespruceeats.com/mee-bakso-recipe-3030253">The Spruce Eats</a></p>
+        <img src="../images/Bakso.jpg" alt="Bakso">
+        <p>Source: <a href="https://en.wikipedia.org/wiki/Bakso">Wikipedia</a></p>
         <h2>Ingredients</h2>
             <ul>
                 <li>5 pounds beef bones, such as marrow bones and beef hind shank</li>
