adding basic css

--- a/list/bakso.html
+++ b/list/bakso.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Bakso</title>
+        <link rel="stylesheet" href="bakso.css">
     </head>
 
     <body>
-        <h1>Bakso</h1>
-        <img src="../images/Bakso.jpg" alt="Bakso">
-        <p>Source: <a href="https://en.wikipedia.org/wiki/Bakso">Wikipedia</a></p>
-        <h2>Ingredients</h2>
+        <h1 class="header">Bakso</h1>
+            <div class="images">
+                <img src="../images/Bakso.jpg" alt="Bakso">
+                <p>Source: <a href="https://en.wikipedia.org/wiki/Bakso">Wikipedia</a></p>
+            </div>
+        <h2 class="header">Ingredients</h2>
             <ul>
                 <li>5 pounds beef bones, such as marrow bones and beef hind shank</li>
                 <li>1 (2-inch) piece ginger, peeled</li>
@@ -25,7 +28,7 @@
                 <li>1/2 cup store-bought or homemade crisp-fried shallots</li>
                 <li>4 large hard boiled eggs, optional</li>
             </ul>
-        <h1>Steps</h1>
+        <h1 class="header">Steps</h1>
             <ol>
                 <li>Gather the ingredients.</li>
                 <li>Place the bones in a large pot. Cover with water, about 4 quarts. Bring to the boil over high heat. Skim off any scum and impurities that rise to the top.</li>
