--- a/list/martabak.html
+++ b/list/martabak.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Martabak</title>
+        <link rel="stylesheet" href="martabak.css">
     </head>
 
     <body>
-        <h1>Martabak</h1>
-        <img src="../images/Martabak.jpg" alt="Martabak">
-        <p>Source: <a href="http://nomadette.com/martabak-manis/">Nomadette</a></p>
-        <h2>Ingredients</h2>
+        <h1 class="header">Martabak</h1>
+            <div class="images">
+                <img src="../images/Martabak.jpg" alt="Martabak">
+                <p>Source: <a href="http://nomadette.com/martabak-manis/">Nomadette</a></p>
+            </div>
+        <h2 class="header">Ingredients</h2>
             <ul>
                 <li>225g Plain Flour</li>
                 <li>1 Egg</li>
@@ -20,13 +23,13 @@
                 <li>1 tsp Baking soda + 1-2 tbsps Water</li>
                 <li>Extra Sugar for Sprinkling</li>
             </ul>
-            <h3>Toppings</h3>
+            <h3 class="header">Toppings</h3>
             <ul>
                 <li>2 tbsps Nutella</li>
                 <li>2 tbsps Cheddar Cheese</li>
                 <li>2 tbsps Condensed Milk</li>
             </ul>
-        <h1>Steps</h1>
+        <h1 class="header">Steps</h1>
             <ol>
                 <li>Whisk together egg, sugar and vanilla essence until well incorporated.</li>
                 <li>Sift in flour and add salt. Gradually add water and whisk well.</li>
