--- a/list/nasi_goreng.html
+++ b/list/nasi_goreng.html
@@ -2,15 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Nasi Goreng | Indonesian Recipes</title>
+        <link rel="stylesheet" href="nasi_goreng.css">
     </head>
 
     <body>
-        <h1>Nasi Goreng</h1>
-        <img src="../images/Nasi Goreng.webp" alt="">
-        <p>Source: <a href="https://www.chilipeppermadness.com/recipes/nasi-goreng/">Chili Pepper Madness</a></p>
+        <h1 class="header">Nasi Goreng</h1>
+        <div class="images">
+            <img src="../images/Nasi Goreng.webp" alt="">
+            <p>Source: <a href="https://www.chilipeppermadness.com/recipes/nasi-goreng/">Chili Pepper Madness</a></p>
+        </div>
 
-        <h2>Ingredients</h2>
+        <h2 class="header">Ingredients</h2>
             <ul>
                 <li>1 cup white long-rice</li>
                 <li>2 tsp vegetable oil</li>
@@ -23,7 +26,7 @@
                 <li>Sesame seeds, to serve</li>
                 <li>Shallots, sliced, extra, to serve</li>
             </ul>
-        <h1>Steps</h1>
+        <h1 class="header">Steps</h1>
             <ol>
                 <li>
                     Cook the rice in a large saucepan of boiling water for 12 minutes or until tender. Drain and leave to cool.
