--- a/list/satay.html
+++ b/list/satay.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Satay</title>
+        <link rel="stylesheet" href="satay.css">
     </head>
 
     <body>
-        <h1>Satay</h1>
-        <img src="../images/Satay.jpg" alt="Satay">
-        <p>Source: <a href="https://en.wikipedia.org/wiki/Satay">Wikipedia</a></p>
-        <h2>Ingredients</h2>
+        <h1 class="header">Satay</h1>
+            <div class="images">
+                <img src="../images/Satay.jpg" alt="Satay">
+                <p>Source: <a href="https://en.wikipedia.org/wiki/Satay">Wikipedia</a></p>
+            </div>
+        <h2 class="header">Ingredients</h2>
             <ul>
                 <li>1 onion diced</li>
                 <li>2 tsp curry powder</li>
@@ -21,7 +24,7 @@
                 <li>1 capsicum optional sliced</li>
                 <li>1 splash oil for frying</li>
             </ul>
-        <h1>Steps</h1>
+        <h1 class="header">Steps</h1>
             <ol>
                 <li>Fry onion, garlic and capsicum in a little oil.</li>
                 <li>Add chicken and fry for a minute.</li>
