--- a/list/rendang.html
+++ b/list/rendang.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Rendang</title>
+        <link rel="stylesheet" href="rendang.css">
     </head>
 
     <body>
-        <h1>Rendang</h1>
-        <img src="../images/Rendang.jpg" alt="Rendang">
-        <p>Source: <a href="https://rasamalaysia.com/beef-rendang-recipe-rendang-daging/">Rasa Malaysia</a></p>
-        <h2>Ingredients</h2>
+        <h1 class="header">Rendang</h1>
+        <div class="images">
+            <img src="../images/Rendang.jpg" alt="Rendang">
+            <p>Source: <a href="https://rasamalaysia.com/beef-rendang-recipe-rendang-daging/">Rasa Malaysia</a></p>
+        </div>
+        <h2 class="header">Ingredients</h2>
             <ul>
                 <li>1 1/2 lbs. 0.6 kg boneless beef short ribs, cut into cubes</li>
                 <li>5 tablespoons cooking oil</li>
@@ -27,7 +30,7 @@
                 <li>salt to taste</li>
             </ul>
 
-            <h3>Spice Paste</h3>
+            <h3 class="header">Spice Paste</h3>
                 <ul>
                     <li>5 shallots</li>
                     <li>1 inch galangal</li>
@@ -36,7 +39,7 @@
                     <li>1 inch ginger</li>
                     <li>10-12 dried chilies soaked in warm water and seeded</li>
                 </ul>
-        <h1>Steps</h1>
+        <h1 class="header">Steps</h1>
             <ol>
                 <li>Chop the spice paste ingredients and then blend it in a food processor until fine.</li>
                 <li>Heat the oil in a stew pot, add the spice paste, cinnamon, cloves, star anise, and cardamom and stir-fry until aromatic. Add the beef and the pounded lemongrass and stir for 1 minute. Add the coconut milk, tamarind juice, water, and simmer on medium heat, stirring frequently until the meat is almost cooked.</li>
