--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Indonesian Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>List of Indoensian recipes that I like</h1>
-        <ul>
-            <li><a href="list/nasi_goreng.html">Nasi Goreng</a></li>
-            <li><a href="list/satay.html">Satay</a></li>
-            <li><a href="list/rendang.html">Rendang</a></li>
-            <li><a href="list/bakso.html">Bakso</a></li>
-            <li><a href="list/martabak.html">Martabak</a></li>
-        </ul>
+        <h1 id="header">List of Indonesian recipes</h1>
+        <div class="list">
+            <ul>
+                <li><a href="list/nasi_goreng.html">Nasi Goreng</a></li>
+                <li><a href="list/satay.html">Satay</a></li>
+                <li><a href="list/rendang.html">Rendang</a></li>
+                <li><a href="list/bakso.html">Bakso</a></li>
+                <li><a href="list/martabak.html">Martabak</a></li>
+            </ul>
+        </div>
     </body>
 </html>
